--- a/main.tex
+++ b/main.tex
@@ -1115,6 +1115,74 @@ Thus,
 \end{equation}
 
 This means the vapor pressure increases by approximately 73\% when the temperature rises from 298 K to 310 K.
+
+
+\subsection{Chemical Potential and Gibbs Free Energy}
+For a system with multiple components,
+\begin{equation}
+    G = \sum_i \mu_i n_i.
+\end{equation}
+Differentiating,
+\begin{equation}
+    dG = \sum_i \mu_i dn_i + \sum_i n_i d\mu_i.
+\end{equation}
+For a closed system where \( dn_i = 0 \):
+\begin{equation}
+    dG = \sum_i n_i d\mu_i.
+\end{equation}
+For a single-component system, this reduces to:
+\begin{equation}
+    d\mu = \frac{V}{n} dP - \frac{S}{n} dT.
+\end{equation}
+At constant pressure \( (dP = 0) \):
+\begin{equation}
+    \left(\frac{\partial \mu}{\partial T} \right)_P = -\frac{S}{n}.
+\end{equation}
+Since \( \mu = \frac{G}{n} \), we obtain:
+\begin{equation}
+    \left(\frac{\partial G}{\partial T} \right)_P = -S.
+\end{equation}
+
+\subsection{Derivation of the Gibbs-Helmholtz Equation}
+Starting from:
+\begin{equation}
+    G = H - TS,
+\end{equation}
+we divide by \( T \):
+\begin{equation}
+    \frac{G}{T} = \frac{H}{T} - S.
+\end{equation}
+Taking the derivative with respect to \( T \) at constant pressure:
+\begin{equation}
+    \left( \frac{\partial}{\partial T} \left( \frac{G}{T} \right) \right)_P = \left( \frac{\partial}{\partial T} \left( \frac{H}{T} - S \right) \right)_P.
+\end{equation}
+Expanding the derivative:
+\begin{equation}
+    \left( \frac{\partial}{\partial T} \left( \frac{G}{T} \right) \right)_P = \frac{1}{T} \left( \frac{\partial G}{\partial T} \right)_P - \frac{G}{T^2}.
+\end{equation}
+Using \( \left(\frac{\partial G}{\partial T} \right)_P = -S \):
+\begin{equation}
+    \frac{1}{T} (-S) - \frac{G}{T^2} = -\frac{H}{T^2}.
+\end{equation}
+Thus, the Gibbs-Helmholtz equation is:
+\begin{equation}
+    \left( \frac{\partial}{\partial T} \left( \frac{G}{T} \right) \right)_P = -\frac{H}{T^2}.
+\end{equation}
+
+\section*{Integrated Form of the Gibbs-Helmholtz Equation}
+Integrating the equation between two temperatures \( T_1 \) and \( T_2 \):
+\begin{equation}
+    \frac{G_2}{T_2} - \frac{G_1}{T_1} = \int_{T_1}^{T_2} -\frac{H}{T^2} dT.
+\end{equation}
+Assuming \( H \) is approximately constant over the temperature range:
+\begin{equation}
+    \frac{G_2}{T_2} - \frac{G_1}{T_1} = -H \left( \frac{1}{T_2} - \frac{1}{T_1} \right).
+\end{equation}
+This is the integrated form of the Gibbs-Helmholtz equation, useful for calculating \( G \) at different temperatures.
+
+
+
+
 \subsection{Colligative Properties from Chemical Potential in Mixtures}
 The chemical potential (\(\mu\)) of a component in a mixture is given by:
 \begin{equation}
